# CoRE-jp-Isaac-Sim-ROS2-packages

./: .gitmodules  LICENSE  README.md
colcon_ws/: .gitignore  test.py
colcon_ws/src/core_jp_camera_publisher/: package.xml  setup.cfg  setup.py
colcon_ws/src/core_jp_camera_publisher/core_jp_camera_publisher/: publisher_node.py
colcon_ws/src/core_jp_camera_viewer/: CMakeLists.txt  package.xml
colcon_ws/src/core_jp_camera_viewer/include/core_jp_camera_viewer/: mainwindow.h  mygraphicsview.h  recieve_image_node.hpp
colcon_ws/src/core_jp_camera_viewer/resource/: resource.qrc
colcon_ws/src/core_jp_camera_viewer/src/: mainwindow.cpp  mainwindow.ui  mygraphicsview.cpp  viewer.cpp
colcon_ws/src/core_stage_description/: CMakeLists.txt  package.xml
colcon_ws/src/core_stage_description/config/: marker_plate.rviz
colcon_ws/src/core_stage_description/launch/: marker_plate_description.launch.py
colcon_ws/src/core_stage_description/meshes/USD/: core_2025_stage.usd
colcon_ws/src/core_stage_description/meshes/USD/props/: Body1.usd  Body10.usd  Body100.usd  Body1014.usd  Body11.usd  Body110.usd  Body1100.usd  Body1101.usd  Body1102.usd  Body1103.usd  Body1104.usd  Body1105.usd  Body1106.usd  Body1107.usd  Body1108.usd  Body1109.usd  Body111.usd  Body1110.usd  Body1111.usd  Body11118.usd  Body1112.usd  Body1113.usd  Body1114.usd  Body1115.usd  Body1116.usd  Body1117.usd  Body1118.usd  Body1119.usd  Body112.usd  Body1120.usd  Body1121.usd  Body1122.usd  Body1123.usd  Body1124.usd  Body1125.usd  Body1126.usd  Body1127.usd  Body1128.usd  Body1129.usd  Body113.usd  (+252 more)
colcon_ws/src/core_stage_description/urdf/: core_stage.urdf.xacro
colcon_ws/src/flying_disc_description/: CMakeLists.txt  package.xml
colcon_ws/src/flying_disc_description/launch/: flying_disc_description.launch.py
colcon_ws/src/flying_disc_description/meshes/USD/: flying_disc.usd  flying_disc_10set.usd  flying_disc_20set.usd  flying_disc_30set.usd
colcon_ws/src/flying_disc_description/urdf/: common.xacro  flying_disc.urdf.xacro
colcon_ws/src/game_manager/: package.xml  setup.cfg  setup.py
colcon_ws/src/game_manager/game_manager/: manager_node.py
colcon_ws/src/hp_manager/: package.xml  setup.cfg  setup.py
colcon_ws/src/hp_manager/hp_manager/: manager_node.py
colcon_ws/src/image_compressor/: package.xml  setup.cfg  setup.py
colcon_ws/src/image_compressor/image_compressor/: compressor_node.py
colcon_ws/src/isaac_ros2_utils/isaac_ros2_scripts/isaac_scripts/: robot_controller.py
colcon_ws/src/sample_robot_control_keyboard/: CMakeLists.txt  package.xml
colcon_ws/src/sample_robot_control_keyboard/src/: controller.cpp
colcon_ws/src/sample_robot_description/: CMakeLists.txt  package.xml
colcon_ws/src/sample_robot_description/config/: sample_robot_config.yaml  sample_robot_controller.config.yaml  sample_robot_description.rviz
colcon_ws/src/sample_robot_description/gazebo/: sample_robot.gazebo.xacro
colcon_ws/src/sample_robot_description/isaac/: sample_robot.isaac.xacro
colcon_ws/src/sample_robot_description/launch/: sample_robot_description.launch.py
colcon_ws/src/sample_robot_description/meshes/STL/: omni_barrel_100mm.stl  omni_housing_100mm.stl  shooter_body.stl  shooter_mag.stl
colcon_ws/src/sample_robot_description/robots/: sample_robot.urdf.xacro  sample_robot_1.urdf.xacro  sample_robot_2.urdf.xacro  sample_robot_3.urdf.xacro  sample_robot_4.urdf.xacro  sample_robot_5.urdf.xacro  sample_robot_6.urdf.xacro  sample_robot_7.urdf.xacro  sample_robot_8.urdf.xacro
colcon_ws/src/sample_robot_description/ros2_control/: sample_robot.ros2_control.xacro
colcon_ws/src/sample_robot_description/urdf/: common.xacro
colcon_ws/src/sample_robot_description/urdf/base/: base.gazebo.xacro  base.urdf.xacro
colcon_ws/src/sample_robot_description/urdf/shooter/: shooter.urdf.xacro
colcon_ws/src/sample_robot_description/urdf/wheel/: wheel.gazebo.xacro  wheel.urdf.xacro  wheel_100mm.urdf.xacro  wheel_100mm_light.urdf.xacro
colcon_ws/src/sample_robot_sim/: CMakeLists.txt  package.xml
colcon_ws/src/sample_robot_sim/launch/: bring_up_core_stage.launch.py  sample_robot_1_spawn_for_core.launch.py  sample_robot_2_spawn_for_core.launch.py  sample_robot_3_spawn_for_core.launch.py  sample_robot_4_spawn_for_core.launch.py  sample_robot_5_spawn_for_core.launch.py  sample_robot_6_spawn_for_core.launch.py  sample_robot_7_spawn_for_core.launch.py  sample_robot_8_spawn_for_core.launch.py  sample_robot_spawn_for_core.launch.py  start_game_manager.launch.py
colcon_ws/src/teleop_twist_joy_for_sample_robot/: CMakeLists.txt  README.md  package.xml
colcon_ws/src/teleop_twist_joy_for_sample_robot/config/: pdp.config.yaml  ps3-holonomic.config.yaml
colcon_ws/src/teleop_twist_joy_for_sample_robot/include/teleop_twist_joy_for_sample_robot/: teleop_twist_joy.hpp
colcon_ws/src/teleop_twist_joy_for_sample_robot/launch/: teleop-launch.py
colcon_ws/src/teleop_twist_joy_for_sample_robot/src/: teleop_node.cpp  teleop_twist_joy.cpp
colcon_ws/src/velocity_pub/src/: velocity_pub.cpp
docker/: Dockerfile  build_docker_image.sh  launch_docker.sh
tools/: control.html  robot_1_control.html  robot_2_control.html  robot_3_control.html  robot_4_control.html  robot_5_control.html  robot_6_control.html  robot_7_control.html  robot_8_control.html
